<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="rocks.teagantotally.blinkercarbrowser.ui.vms.SearchOptionsVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:padding="10dp">

        <TextView
            android:id="@+id/header_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/header_search_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_search" />

        <CheckBox
            android:id="@+id/show_search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={vm.showSearchBar}"
            android:text="@string/show_search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_search_divider" />

        <CheckBox
            android:id="@+id/search_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={vm.searchYear}"
            android:text="@string/search_vehicle_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_search_bar" />

        <CheckBox
            android:id="@+id/search_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={vm.searchMake}"
            android:text="@string/search_vehicle_make"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_year" />

        <CheckBox
            android:id="@+id/search_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={vm.searchModel}"
            android:text="@string/search_model"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_make" />

        <TextView
            android:id="@+id/header_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_model" />

        <View
            android:id="@+id/header_group_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_group" />

        <CheckBox
            android:id="@+id/group_by_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={vm.groupByYear}"
            android:text="@string/group_by_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_group_divider" />

    </android.support.constraint.ConstraintLayout>

</layout>